--- a/src/app/activity/[id]/components/activity-info/activity-info.module.css
+++ b/src/app/activity/[id]/components/activity-info/activity-info.module.css
@@ -1,11 +1,13 @@
 .activity-info {
+  > *:not(:last-child) {
+    margin-block-end: 1.5rem;
+  }
+
   .heading {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 0.75rem;
-
-    margin-block-end: 1.5rem;
 
     > h1 {
       color: var(--color-zinc-800);
@@ -35,8 +37,6 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
-
-    margin-block-end: 1.5rem;
 
     > li {
       display: flex;
