--- a/src/app/activity/[id]/components/showing-data/showing-data.module.css
+++ b/src/app/activity/[id]/components/showing-data/showing-data.module.css
@@ -1,5 +1,8 @@
 .showing-data {
   grid-area: writings;
+
+  padding-block-end: 2rem;
+  margin-block-end: 2rem;
 }
 
 .seat-selection {
